# blockchain-from-scrach

./: Cargo.toml  block.db  genesis.json
src/: main.rs
src/cmd/: balances.rs  cmd.rs  mod.rs  run.rs  tx.rs
src/database/: block.db  block.rs  fs.rs  genesis.json  genesis.rs  mod.rs  state.json  state.rs  tx.db  tx.rs
src/node/: node.rs
